// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a default state that changes and saves and is then converted to another that also changed and saved should have created intructions to restore, change and save 1`] = `
Array [
  "context.restore()",
  "context.fillStyle = \\"#00f\\"",
  "context.save()",
]
`;

exports[`a default state that changes and saves and is then converted to another that changed, saved and then changed again should have created intructions to restore, change, save and change again 1`] = `
Array [
  "context.restore()",
  "context.fillStyle = \\"#00f\\"",
  "context.save()",
  "context.fillStyle = \\"#ff0\\"",
]
`;

exports[`a default state that changes and saves and then changes in two different ways and then one way is converted to the other way should result in instructions that change the state, but no restoring 1`] = `
Array [
  "context.fillStyle = \\"#00f\\"",
  "context.strokeStyle = \\"#000\\"",
]
`;

exports[`a default state that is changed to a non-default state that differs on some fields but not all should have created an instruction that sets the fields that differ 1`] = `
Array [
  "context.lineWidth = 2",
  "context.setLineDash([1,2])",
  "context.strokeStyle = \\"#f00\\"",
  "context.setTransform(2,0,0,2,0,0)",
]
`;

exports[`a default state that sets the fill style should have created an instruction 1`] = `
Array [
  "context.fillStyle = \\"#f00\\"",
]
`;
